feat: update admin api's and medium compliance layer
